--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,14 @@
-<p>home works!</p>
+<h1>The world is yours!</h1>
+
+<div class="container marketing mx-auto ">
+    <div class="row container mx-auto">
+
+    <div *ngFor="let destinations of destinations"  class="card col-lg-4 col-xs-12 col-md-6 pr-2 pl-2 pb-2 pt-2" >
+    <img class="fotos" src="{{destinations.img}}" alt="Image paradise">
+    <p class="badge badge-primary">Read more</p>
+    <p>{{destinations.date}} {{destinations.time}}</p>
+    <p>PS: {{destinations.name}}, year: {{destinations.shortDescr}}</p>
+    
+
+</div>
+</div>
