--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,8 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-light bg-light">
+    <form class="form-inline">
+    <button class="btn btn-sm btn-outline-secondary" type="button" routerLink="/">Home</button>
+      <button class="btn btn-sm btn-outline-secondary" type="button" routerLink="/about">About</button>
+      <button class="btn btn-sm btn-outline-secondary" type="button" routerLink="/contact">Contact us!</button>
+
+    </form>
+  </nav>
