--- a/src/app/hero/hero.component.css
+++ b/src/app/hero/hero.component.css
@@ -1,6 +1,7 @@
 .jumbotron{
     background: url('https://cdn.pixabay.com/photo/2017/11/02/04/36/brazil-2910129_1280.jpg')  no-repeat center center;
     /* background-image: url(""); */
-    padding-top: 5%;
+    padding-top: 20%;
     padding-bottom: 5%;
+    color: white;
 }
