bugs fixed serri

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-light bg-light">
-    <form class="form-inline">
-    <button class="btn btn-sm btn-outline-secondary" type="button" routerLink="/">Home</button>
-      <button class="btn btn-sm btn-outline-secondary" type="button" routerLink="/about">About</button>
-      <button class="btn btn-sm btn-outline-secondary" type="button" routerLink="/contact">Contact us!</button>
+   
+    <a class="btn btn-sm btn-outline-secondary" type="button" routerLink="/">Home</a>
+      <a class="btn btn-sm btn-outline-secondary" type="button" routerLink="/about">About</a>
+      <a class="btn btn-sm btn-outline-secondary" type="button" routerLink="/contact">Contact us!</a>
 
-    </form>
+    
   </nav>
